--- a/Histogram.ipynb
+++ b/Histogram.ipynb
@@ -87,6 +87,30 @@
     "plt. ylabel ( 'Frequency')\n",
     "plt. show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pa import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "# Sample data\n",
+    "data = {\n",
+    "    'semester': ['Sem 1', 'Sem 1', 'Sem 1', 'Sem 1', 'Sem 1', 'Sem 2', 'Sem 2', 'Sem 2', 'Sem 2', 'Sem 2'],\n",
+    "    'hours_studied': [5, 8, 10, 4, 6, 9, 11, 7, 12, 8]\n",
+    "}\n",
+    "# Create a DataFrame\n",
+    "df = pd. DataFrame(data)\n",
+    "# Create the boxplot\n",
+    "plt. figure(figsize=(8, 6))\n",
+    "sns.boxplot(x='semester', y='hours_studied', data=df)\n",
+    "# Set plot labels and title\n",
+    "plt. title( 'Student Performance: Hours Studied by Semester') \n",
+    "plt. xlabel( 'Semester')\n",
+    "plt. ylabel( 'Number of Hours Studied')\n"
+   ]
   }
  ],
  "metadata": {
